# EasyPR4Android

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/yanyu/com/mrcar/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
